@@ -37,6 +37,7 @@ MAKE_CONST_WXSTRING(STCNameStr);
 
 %include _stc_rename.i
 
+MustHaveApp(wxStyledTextCtrl);
 
 //---------------------------------------------------------------------------
 // Get all our defs from the REAL header file.
@@ -60,7 +61,6 @@ EVT_STC_MODIFIED = wx.PyEventBinder( wxEVT_STC_MODIFIED, 1 )
 EVT_STC_MACRORECORD = wx.PyEventBinder( wxEVT_STC_MACRORECORD, 1 )
 EVT_STC_MARGINCLICK = wx.PyEventBinder( wxEVT_STC_MARGINCLICK, 1 )
 EVT_STC_NEEDSHOWN = wx.PyEventBinder( wxEVT_STC_NEEDSHOWN, 1 )
-EVT_STC_POSCHANGED = wx.PyEventBinder( wxEVT_STC_POSCHANGED, 1 )
 EVT_STC_PAINTED = wx.PyEventBinder( wxEVT_STC_PAINTED, 1 )
 EVT_STC_USERLISTSELECTION = wx.PyEventBinder( wxEVT_STC_USERLISTSELECTION, 1 )
 EVT_STC_URIDROPPED = wx.PyEventBinder( wxEVT_STC_URIDROPPED, 1 )
